tests/negative/gold/prefix-decrement-test.gold
tests/negative/prefix-decrement-test.toit:9:3: error: Prefix decrement has been removed
  --x
  ^~~
Compilation failed
